--- a/.github/workflows/build-fedora.yml
+++ b/.github/workflows/build-fedora.yml
@@ -33,5 +33,19 @@ jobs:
           
           tags: ghcr.io/${{ github.repository_owner }}/devcontainer-rhelyeah:fedora-latest
 
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
+        with:
+          image-ref: 'ghcr.io/${{ github.repository_owner }}/devcontainer-rhelyeah:fedora-latest'
+          format: 'template'
+          template: '@/contrib/sarif.tpl'
+          output: 'trivy-results-fedora.sarif'
+          severity: 'CRITICAL,HIGH'
+  
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: 'trivy-results-fedora.sarif'
+
       - name: Post build cleanup
         run: docker system prune -f
